--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Crickdle - Daily Cricket Guessing Game!</title>
 	  <style>
-		/* Set up responsive design */
+/* Set up responsive design */
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -41,6 +41,7 @@ p {
 
 /* Set up game container styles */
 #game-container {
+  width: 90%;
   max-width: 600px;
   margin: 0 auto;
   padding: 1rem;
