--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ p {
         <p>Congratulations! You guessed the correct player.</p>
       </div>
       <div id="answer" style="display:none">
-        <p>The correct answer is: <span id="correct-answer"></span></p>
+	      <p><b><span id="correct-answer"></span></b></p>
       </div>
     </div>
 	  <script>
