--- a/index.html
+++ b/index.html
@@ -41,13 +41,23 @@ p {
 
 /* Set up game container styles */
 #game-container {
-  width: 90%;
-  max-width: 600px;
   margin: 0 auto;
   padding: 1rem;
   border-radius: 0.5rem;
   background-color: #f5f5f5;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+@media only screen and (max-width: 600px) {
+  #game-container {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  #game-container {
+    width: 600px;
+  }
 }
 
 /* Style the match details section */
