--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ p {
   margin-bottom: 1rem;
 }
 
-#match-details h2 {
+#match-details h1 {
   margin-bottom: 0.5rem;
   font-size: 1.5rem;
 }
@@ -147,7 +147,7 @@ p {
   </head>
   <body>
     <div id="match-details">
-	    <p><h2>CRICKDLE</h2>
+	    <p style="color:#1dc278;><h1>CRICKDLE</h1>
 	    <p><span id="nation1"></span> vs <span id="nation2"></span></p>
 	    <p><span id="date"></span></p>
 	    <p><span id="score"></span></p>
