--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ p {
   </head>
   <body>
     <div id="match-details">
-	    <p style="color:#1dc278;><h2>CRICKDLE</h2></p>
+	    <p><h2>CRICKDLE</h2></p>
 	    <p><span id="nation1"></span> vs <span id="nation2"></span></p>
 	    <p><span id="date"></span></p>
 	    <p><span id="score"></span></p>
