--- a/index.html
+++ b/index.html
@@ -66,9 +66,10 @@ p {
   margin-bottom: 1rem;
 }
 
-#match-details h2 {
+#match-details h1 {
   margin-bottom: 0.5rem;
   font-size: 1.5rem;
+	color: #1dc278;
 }
 
 #match-details p {
@@ -147,7 +148,7 @@ p {
   </head>
   <body>
     <div id="match-details">
-	    <p><h2>CRICKDLE</h2></p>
+	    <p><h1>CRICKDLE</h1></p>
 	    <p><span id="nation1"></span> vs <span id="nation2"></span></p>
 	    <p><span id="date"></span></p>
 	    <p><span id="score"></span></p>
