--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Crickdle - Daily Cricket Guessing Game!</title>
+	  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 	  <style>
 /* Set up responsive design */
 html {
