--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Crickdle - Daily Cricket Guessing Game!</title>
-	  <link rel="icon" type="image/x-icon" href="/favicon.ico.png">
+	  <link rel="icon" type="image/x-icon" href="favicon.ico.png">
 	  <style>
 /* Set up responsive design */
 html {
