--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ const gameDetails = {
   totalGames: 4
 };
 
-const correctPlayer = ["Pant"];
+const correctPlayer = "Pant";
 
 // Set up event listeners
 const guessInputs = document.querySelectorAll(".guess-input");
