--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ submitButtons.forEach((button, index) => {
     guessInput.disabled = true;
     button.disabled = true;
     if (guess === correctPlayer) {
-      guessInput.style.backgroundColor = #1dc278;
+      guessInput.style.backgroundColor = "green";
       congratulationsElement.style.display = "block";
       answerElement.style.display = "none";
     } else {
