--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ p {
 #match-details h1 {
   margin-bottom: 0.5rem;
   font-size: 2rem;
-	color: #1dc278;
+	color: "green";
 }
 
 #match-details p {
@@ -114,7 +114,7 @@ p {
 
 .guess-input input:focus {
   outline: none;
-  border-color: #1dc278;
+  border-color: "green";
   box-shadow: 0 0 4px rgba(29, 194, 120, 0.5);
 }
 
@@ -123,7 +123,7 @@ p {
   font-size: 1.2rem;
   border: none;
   border-radius: 0.5rem;
-  background-color: #1dc278;
+  background-color: "green";
   color: #fff;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
