--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@ html {
   box-sizing: inherit;
 }
 
+@media only screen and (min-width: 768px) {
+  html {
+    font-size: 18px;
+  }
+}
+
 /* Set up font styles */
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.5;
   color: #333;
 }
@@ -31,13 +37,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  margin: 0 0 1rem;
+  margin: 0.5rem 0;
 }
 
 /* Set up game container styles */
 #game-container {
   margin: 0 auto;
-  padding: 1rem;
+  padding: 1.5rem;
   border-radius: 0.5rem;
   background-color: #f5f5f5;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -53,7 +59,7 @@ p {
 
 #match-details h1 {
   margin-bottom: 0.5rem;
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #1dc278;
 }
 
@@ -70,29 +76,30 @@ p {
 
 #guess-section h2 {
   margin-bottom: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .guess-input {
   margin: 1rem 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .guess-input label {
-  margin-bottom: 0.5rem;
+  margin-right: 0.5rem;
   font-size: 1.2rem;
 }
 
 .guess-input input {
-  margin-bottom: 0.5rem;
+  margin-right: 0.5rem;
   padding: 0.5rem;
   font-size: 1.2rem;
   text-align: center;
   border: 2px solid #ccc;
   border-radius: 0.5rem;
-  width: 100%;
+  width: 60%;
+  max-width: 200px;
   transition: all 0.2s ease-in-out;
 }
 
@@ -111,6 +118,8 @@ p {
   color: #fff;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
+  width: 40%;
+  max-width: 150px;
 }
 
 .guess-input button:disabled {
@@ -118,16 +127,28 @@ p {
   color: #333;
   cursor: default;
 }
-
 /* Style the congratulations and answer sections */
 #congratulations, #answer {
   text-align: center;
   margin-bottom: 1rem;
 }
 
+#congratulations h2, #answer h2 {
+  margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+}
+
 #congratulations p, #answer p {
   margin: 0.5rem 0;
   font-size: 1.2rem;
+}
+
+#congratulations {
+  color: #1dc278;
+}
+
+#answer {
+  color: #f44336;
 }
 	  </style>
   </head>
