--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@ p {
 
 #match-details h1 {
   margin-bottom: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: #1dc278;
 }
 
 #match-details p {
   margin: 0.5rem 0;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
 }
 
 /* Style the guess section */
@@ -140,7 +140,7 @@ p {
 
 #congratulations p, #answer p {
   margin: 0.5rem 0;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
 }
 
 #congratulations {
@@ -179,7 +179,7 @@ p {
         <button id="submit4" disabled>Submit</button>
       </div>
       <div id="congratulations" style="display:none">
-        <p>Congratulations! You guessed the correct player.</p>
+        <p>Congrats! You've hit this one out of the park.</p>
       </div>
       <div id="answer" style="display:none">
 	      <p><b><span id="correct-answer"></span></b></p>
