--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ p {
 
 #congratulations p, #answer p {
   margin: 0.5rem 0;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 #congratulations {
@@ -182,7 +182,7 @@ p {
         <p>Congrats! You've hit this one out of the park.</p>
       </div>
       <div id="answer" style="display:none">
-	      <p><b><span id="correct-answer"></span></b></p>
+	      <p>Golden duck...the correct answer was <span id="correct-answer"></span>.</p>
       </div>
     </div>
 	  <script>
