--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ p {
   background-color: #f7f7f7;
   height: 48px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 16px;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
