--- a/index.html
+++ b/index.html
@@ -175,8 +175,9 @@ p {
 .toolbar-help {
   background: none;
   border: none;
-  font-size: 24px;
   cursor: pointer;
+	 font-size: 16px;
+  padding: 0 10px;
 }
 
 .popup-background {
