--- a/index.html
+++ b/index.html
@@ -57,12 +57,6 @@ p {
   margin-bottom: 1rem;
 }
 
-#match-details h1 {
-  margin-bottom: 0.5rem;
-  font-size: 2rem;
-  color: #1dc278;
-}
-
 #match-details p {
   margin: 0.2rem 0;
   font-size: 1rem;
@@ -167,17 +161,18 @@ p {
 }
 
 .toolbar-title {
-  font-size: 24px;
+  font-size: 30px;
   font-weight: bold;
   margin: 0;
+	 color: #1dc278;
 }
 
 .toolbar-help {
   background: none;
   border: none;
   cursor: pointer;
-	 font-size: 16px;
-  padding: 0 10px;
+	 font-size: 12px;
+  padding: 0 15px;
 }
 
 .popup-background {
@@ -230,7 +225,7 @@ p {
 	<header>
   <div class="toolbar">
     <div class="toolbar-logo">
-      <span class="toolbar-title">Crickdle</span>
+      <span class="toolbar-title">CRICKDLE</span>
       <button class="toolbar-help" aria-label="How to play">
         &#10067;
       </button>
@@ -239,11 +234,11 @@ p {
   <div class="popup-background">
     <div class="popup">
       <div class="popup-header">
-        <h2>How to Play</h2>
+        <h2>How to play</h2>
         <button class="popup-close" aria-label="Close">&times;</button>
       </div>
       <div class="popup-content">
-        <p>Instructions go here.</p>
+        <p>Guess the cricketer based on their stats in this game. You have four guesses total. You should enter the <b>surname</b> of the player you're guessing.</p>
       </div>
     </div>
   </div>
