--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 16px;
+  padding: 10px 16px;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 }
 
