--- a/index.html
+++ b/index.html
@@ -151,8 +151,9 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10px 16px;
+  padding: 0 16px;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+			        margin-bottom: 10px
 }
 
 .toolbar-logo {
