--- a/index.html
+++ b/index.html
@@ -254,19 +254,19 @@ p {
       <strong>Which &#127470;&#127475; player scored 23 and 89* in this game?</strong>
       <div class="guess-input">
         <input type="text" id="guess1" />
-        <button id="submit1">Submit</button>
+	      <button id="submit1"><b>Enter</b></button>
       </div>
       <div class="guess-input">
         <input type="text" id="guess2" disabled />
-        <button id="submit2" disabled>Submit</button>
+        <button id="submit2" disabled><b>Enter</b></button>
       </div>
       <div class="guess-input">
         <input type="text" id="guess3" disabled />
-        <button id="submit3" disabled>Submit</button>
+        <button id="submit3" disabled><b>Enter</b></button>
       </div>
       <div class="guess-input">
         <input type="text" id="guess4" disabled />
-        <button id="submit4" disabled>Submit</button>
+        <button id="submit4" disabled><b>Enter</b></button>
       </div>
       <div id="congratulations" style="display:none">
         <p>Congrats! You've hit this one out of the park.</p>
