--- a/index.html
+++ b/index.html
@@ -127,11 +127,6 @@ p {
   margin-bottom: 1rem;
 }
 
-#congratulations h2, #answer h2 {
-  margin-bottom: 0.5rem;
-  font-size: 1.5rem;
-}
-
 #congratulations p, #answer p {
   margin: 0.5rem 0;
   font-size: 1rem;
@@ -269,10 +264,10 @@ p {
         <button id="submit4" disabled><b>Enter</b></button>
       </div>
       <div id="congratulations" style="display:none">
-        <p>Congrats! You've hit this one out of the park.</p>
+	      <p><b>Congrats! You've hit this one out of the park.</b></p>
       </div>
       <div id="answer" style="display:none">
-	      <p>Golden duck...the correct answer was <span id="correct-answer"></span>.</p>
+	      <p><b>Golden duck...the correct answer was <span id="correct-answer"></span>.</b></p>
       </div>
     </div>
 	  <script>
