--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Crickdle - Daily Cricket Guessing Game!</title>
 	  <link rel="icon" type="image/x-icon" href="favicon.ico.png">
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <style>
 /* Set up responsive design */
 html {
