--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ p {
 	      <p><b>Congrats! You've hit this one out of the park.</b></p>
       </div>
       <div id="answer" style="display:none">
-	      <p><b>Golden duck...the correct answer is <span id="correct-answer"></span>.</b></p>
+	      <p><b>Golden duck! The correct answer is <span id="correct-answer"></span>.</b></p>
       </div>
     </div>
 	  <script>
@@ -300,12 +300,12 @@ submitButtons.forEach((button, index) => {
     button.disabled = true;
     if (guess === correctPlayer) {
       guessInput.style.backgroundColor = "#1dc278";
+	    guessInput.style.color = "white";
       congratulationsElement.style.display = "block";
       answerElement.style.display = "none";
-	    guessInput.style.Color = "#ffffff";
     } else {
       guessInput.style.backgroundColor = "grey";
-	    guessInput.style.Color = "#ffffff";
+	      guessInput.style.color = "white";
       if (index < 3) {
         guessInputs[index + 1].querySelector("input").disabled = false;
         guessInputs[index + 1].querySelector("button").disabled = false;
