--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@ p {
   width: 60%;
   max-width: 200px;
   transition: all 0.2s ease-in-out;
+	text-transform: uppercase;
 }
 
 .guess-input input:focus {
@@ -158,7 +159,7 @@ p {
 }
 
 .toolbar-title {
-  font-size: 40px;
+  font-size: 35px;
   font-weight: bold;
   margin: 0;
 	 color: #1dc278;
@@ -343,6 +344,15 @@ helpButton.addEventListener('click', function() {
 
 popupCloseButton.addEventListener('click', function() {
   popupBackground.style.display = 'none';
+});
+		  
+		  const inputElements = document.querySelectorAll('input[type="text"]');
+
+inputElements.forEach((input) => {
+  input.addEventListener('input', (event) => {
+    const inputValue = event.target.value;
+    event.target.value = inputValue.toUpperCase();
+  });
 });
 </script>
   </body>
