--- a/index.html
+++ b/index.html
@@ -251,19 +251,19 @@ p {
       <strong>Which &#127470;&#127475; player scored 23 and 89* in this game?</strong>
       <div class="guess-input">
         <input type="text" id="guess1" />
-	      <button id="submit1"><b>Enter</b></button>
+	      <button id="submit1"><b>ENTER</b></button>
       </div>
       <div class="guess-input">
         <input type="text" id="guess2" disabled />
-        <button id="submit2" disabled><b>Enter</b></button>
+        <button id="submit2" disabled><b>ENTER</b></button>
       </div>
       <div class="guess-input">
         <input type="text" id="guess3" disabled />
-        <button id="submit3" disabled><b>Enter</b></button>
+        <button id="submit3" disabled><b>ENTER</b></button>
       </div>
       <div class="guess-input">
         <input type="text" id="guess4" disabled />
-        <button id="submit4" disabled><b>Enter</b></button>
+        <button id="submit4" disabled><b>ENTER</b></button>
       </div>
       <div id="congratulations" style="display:none">
 	      <p><b>Congrats! You've hit this one out of the park.</b></p>
@@ -283,7 +283,7 @@ const gameDetails = {
   totalGames: 4
 };
 
-const correctPlayer = "Pant";
+const correctPlayer = "PANT";
 
 // Set up event listeners
 const guessInputs = document.querySelectorAll(".guess-input");
