--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ p {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
   display: none;
   justify-content: center;
   align-items: center;
@@ -203,6 +203,7 @@ p {
 
 .popup-header h2 {
   margin: 0;
+	font-size: 24px;
 }
 
 .popup-close {
@@ -210,6 +211,7 @@ p {
   border: none;
   font-size: 24px;
   cursor: pointer;
+	color: #f03a17;
 }
 
 .popup-content {
