--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ p {
 
 #match-details p {
   margin: 0.2rem 0;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 /* Style the guess section */
@@ -71,7 +71,7 @@ p {
 
 #guess-section h2 {
   margin-bottom: 0.5rem;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .guess-input {
@@ -131,7 +131,7 @@ p {
 
 #congratulations p, #answer p {
   margin: 0.5rem 0;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 #congratulations {
@@ -250,7 +250,7 @@ p {
 	    <p>Test <span id="game-number"></span> of <span id="total-games"></span></p>
     </div>
     <div id="guess-section">
-      <strong>Which &#127470;&#127475; player scored 23 and 89* in this game?</strong>
+      <h2>Which &#127470;&#127475; player scored 23 and 89* in this game?</h2>
       <div class="guess-input">
         <input type="text" id="guess1" />
 	      <button id="submit1"><b>ENTER</b></button>
