--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ p {
   align-items: center;
   padding: 0 16px;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
-			        margin-bottom: 25px
+			        margin-bottom: 30px
 }
 
 .toolbar-logo {
@@ -306,18 +306,35 @@ submitButtons.forEach((button, index) => {
 	    guessInput.style.color = "white";
       congratulationsElement.style.display = "block";
       answerElement.style.display = "none";
-    } else {
-      guessInput.style.backgroundColor = "grey";
-	      guessInput.style.color = "white";
-      if (index < 3) {
-        guessInputs[index + 1].querySelector("input").disabled = false;
-        guessInputs[index + 1].querySelector("button").disabled = false;
-        guessInputs[index + 1].querySelector("input").focus();
-      } else {
-        answerElement.style.display = "block";
-        correctAnswerElement.textContent = correctPlayer;
-      }
+  } else if (guess.length === correctPlayer.length && isOneOrTwoLettersOff(guess, correctPlayer)) {
+    guessInput.style.backgroundColor = "yellow";
+    guessInput.style.color = "black";
+  } else {
+    guessInput.style.backgroundColor = "red";
+    guessInput.style.color = "white";
+  }
+}
+
+function isOneOrTwoLettersOff(guess, answer) {
+  if (guess === answer) {
+    return false;
+  }
+
+  if (guess.length !== answer.length) {
+    return false;
+  }
+
+  let mismatchCount = 0;
+  for (let i = 0; i < guess.length; i++) {
+    if (guess[i] !== answer[i]) {
+      mismatchCount++;
     }
+    if (mismatchCount > 2) {
+      return false;
+    }
+  }
+  return true;
+}
   });
   // Enable submitting by pressing "Enter" key
   const input = guessInputs[index].querySelector("input");
