--- a/index.html
+++ b/index.html
@@ -306,7 +306,26 @@ submitButtons.forEach((button, index) => {
 	    guessInput.style.color = "white";
       congratulationsElement.style.display = "block";
       answerElement.style.display = "none";
-  } else {
+      } else if (guess.length === correctPlayer.length + 1 || guess.length === correctPlayer.length - 1) {
+      let diff = 0;
+      for (let i = 0; i < correctPlayer.length; i++) {
+        if (correctPlayer[i] !== guess[i + diff]) {
+          diff++;
+          if (diff > 1) {
+            break;
+          }
+        }
+      }
+      if (diff === 1) {
+        guessInput.style.backgroundColor = "#ffcc00";
+        guessInput.style.color = "black";
+        guessInput.disabled = false;
+        guessInput.focus();
+        button.disabled = false;
+        return;
+      }
+    }
+
       guessInput.style.backgroundColor = "grey";
 	      guessInput.style.color = "white";
       if (index < 3) {
