--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ p {
 	      <p><b>Congrats! You've hit this one out of the park.</b></p>
       </div>
       <div id="answer" style="display:none">
-	      <p><b>Golden duck! The correct answer is <span id="correct-answer"></span>.</b></p>
+	      <p><b>Duck! The correct answer is <span id="correct-answer"></span>.</b></p>
       </div>
     </div>
 	  <script>
