--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ p {
 /* Style the match details section */
 #match-details {
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 30px;
 }
 
 #match-details p {
