--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@ p {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #ffffff;
   display: none;
   justify-content: center;
   align-items: center;
 }
 
 .popup {
-  background-color: rgba(0, 0, 0, 0);
+  background-color: #ffffff;
   width: 400px;
   padding: 16px;
   border-radius: 8px;
