--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@ p {
   right: 0;
   bottom: 0;
   background-color: white;
+	opacity: 1;
   display: none;
   justify-content: center;
   align-items: center;
