--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@ p {
   bottom: 0;
   background-color: white;
 	opacity: 1;
+	z-index: 9999;
   display: none;
   justify-content: center;
   align-items: center;
