--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ const gameDetails = {
   score: "Australia 369 & 294, India (T: 328) 336 & 329/7",
   gameNumber: 4,
   totalGames: 4,
-  crickdlequestion: "Which &#127470;&#127475; player scored 23 and 89* in this game?"
+  crickdlequestion: "Which 🇮🇳 player scored 23 and 89* in this game?"
 };
 
 const correctPlayer = "PANT";
