--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ const gameDetails = {
   nation1: "Australia",
   nation2: "India",
   date: "January 15 - 19, 2021",
-  score: "Australia 369 & 294, India (T: 328) 336 & 329/7",
+  score: "Australia 369 & 294, India (T: 328) 336 & 329/7; India won by 3 wickets",
   gameNumber: 4,
   totalGames: 4,
   crickdlequestion: "Which 🇮🇳 player scored 23 and 89* in this game?"
