--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@ p {
   </div>
 </header>
     <div id="match-details">
-	    <p><span id="nation1"></span> vs <span id="nation2"></span></p>
-	    <p><span id="date"></span></p>
-	    <p><span id="score"></span></p>
-	    <p>Test <span id="game-number"></span> of <span id="total-games"></span></p>
+	    <p>•<span id="nation1"></span> vs <span id="nation2"></span></p>
+	    <p>•<span id="date"></span></p>
+	    <p>•<span id="score"></span></p>
+	    <p>•Test <span id="game-number"></span> of <span id="total-games"></span></p>
     </div>
     <div id="guess-section">
 	    <h2><span id="crickdlequestion"></span></h2>
