--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	  <link rel="icon" type="image/x-icon" href="favicon.ico.png">
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <style>
-/* Set up responsive design */
 html {
   box-sizing: border-box;
   font-size: 16px;
@@ -21,7 +20,6 @@ html {
   }
 }
 
-/* Set up font styles */
 body {
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
@@ -41,7 +39,6 @@ p {
   margin: 0.5rem 0;
 }
 
-/* Set up game container styles */
 #game-container {
   margin: 0 auto;
   padding: 1.5rem;
@@ -52,7 +49,6 @@ p {
   max-width: 600px;
 }
 
-/* Style the match details section */
 #match-details {
   text-align: center;
   margin-bottom: 25px;
@@ -63,7 +59,6 @@ p {
   font-size: 1.1rem;
 }
 
-/* Style the guess section */
 #guess-section {
   text-align: center;
   margin-bottom: 1rem;
@@ -123,7 +118,7 @@ p {
   color: #333;
   cursor: default;
 }
-/* Style the congratulations and answer sections */
+
 #congratulations, #answer {
   text-align: center;
   margin-bottom: 1rem;
@@ -270,14 +265,13 @@ p {
         <button id="submit4" disabled><b>ENTER</b></button>
       </div>
       <div id="congratulations" style="display:none">
-	      <p><b>Congrats! You've hit this one out of the park.</b></p>
+	      <p><b>Bowled em'! You got the correct answer.</b></p>
       </div>
       <div id="answer" style="display:none">
 	      <p><b>Duck! The correct answer is <span id="correct-answer"></span>.</b></p>
       </div>
     </div>
 	  <script>
-		 // Define game details and correct player (can be set manually)
 const gameDetails = {
   nation1: "Australia",
   nation2: "India",
@@ -290,7 +284,6 @@ const gameDetails = {
 
 const correctPlayer = "PANT";
 
-// Set up event listeners
 const guessInputs = document.querySelectorAll(".guess-input");
 const submitButtons = document.querySelectorAll("button[id^='submit']");
 const answerElement = document.getElementById("answer");
@@ -333,7 +326,7 @@ submitButtons.forEach((button, index) => {
       }
     }
   });
-  // Enable submitting by pressing "Enter" key
+	
   const input = guessInputs[index].querySelector("input");
   input.addEventListener("keyup", (event) => {
     if (event.key === "Enter") {
@@ -342,7 +335,6 @@ submitButtons.forEach((button, index) => {
   });
 });
 
-// Update game details in HTML
 document.getElementById("nation1").textContent = gameDetails.nation1;
 document.getElementById("nation2").textContent = gameDetails.nation2;
 document.getElementById("date").textContent = gameDetails.date;
