--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 				score: "Australia 369 & 294, India (T: 328) 336 & 329/7; India won by 3 wickets",
 				gameNumber: 4,
 				totalGames: 4,
-				crickdlequestion: "Which 🇮🇳 player scored 23 and 89* in this game?"
+				crickdlequestion: "Which India player scored 23 and 89* in this game?"
 			};
 
 			const correctPlayer = "PANT";
