--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 						<button class="popup-close" aria-label="Close">&times;</button>
 					</div>
 					<div class="popup-content">
-						<p>Guess the cricketer based on their stats in this game. You have four guesses total. You should enter the <b>surname</b> of the player you're guessing. If you misspell the name, the box will turn orange, and if you get it wrong, the box will turn grey.</p>
+						<p>Guess the cricketer based on their stats in this game. You should enter the <b>surname</b> of the player you're guessing. If you misspell the name, the box will turn orange, and if you get it wrong, the box will turn grey. You have four guesses total. Good luck!</p>
 					</div>
 				</div>
 			</div>
