--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
 
 			.popup-header h2 {
 				margin: 0;
-				font-size: 18px;
+				font-size: 20px;
+				color: #1dc278;
 			}
 
 			.popup-close {
