--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			}
 
 			body {
-				font-family: 'Montserrat', sans-serif;
+				font-family: 'Georgia', serif;
 				font-weight: 400;
 				font-size: 1rem;
 				line-height: 1.5;
