--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			}
 
 			body {
-				font-family: 'Georgia', serif;
+				font-family: 'Montserrrat', sans-serif;
 				font-weight: 400;
 				font-size: 1rem;
 				line-height: 1.5;
@@ -57,6 +57,7 @@
 			#match-details p {
 				margin: 0.2rem 0;
 				font-size: 1.1rem;
+				font-weight: 600;
 			}
 
 			#guess-section {
